custom_endpoints/minio-test/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
subsets:
  - addresses:
      - ip: 192.168.11.20
    ports:
      - port: 80
