custom_endpoints/minio-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
